@@ -41,3 +41,6 @@ David Cantrell <david@cantrell.org.uk>
 
 Chris Petersen - http://www.forevermore.net/
     - Added cwrsync permanent-share support
+
+Robert Jackson
+    - Added use_lazy_deletes option
