@@ -892,6 +892,12 @@ Chris Petersen \- \fBhttp://www.forevermore.net/\fR
 .RS 4
 Added cwrsync permanent-share support
 .RE
+.PP
+Robert Jackson
+.Sp
+.RS 4
+Added use_lazy_deletes feature
+.RE
 .SH "COPYRIGHT"
 .IX Header "COPYRIGHT"
 Copyright (C) 2003\-2005 Nathan Rosenquist
