@@ -7,6 +7,7 @@ VERSION 1.2.1 (??? ?? ??:?? 2005)
 ------------------------------------------------------------------------------
 - David Cantrell <david@cantrell.org.uk> wrote the rsnapshot-diff utility
 - Chris Petersen added cwrsync permanent-share support
+- Robert Jackson added the "use_lazy_deletes" feature
 
 VERSION 1.2.0 (Jan 31 21:43 2005)
 ------------------------------------------------------------------------------
